--- a/config.toml
+++ b/config.toml
@@ -1,43 +1,32 @@
 baseurl = "https://forsblom.netlify.app/"
 title = "Elias Forsblom"
+theme = "coder-portfolio" # Set the theme.
+languagecode = "en" # The site’s language code used to generate RSS.
+defaultcontentlanguage = "en" # The default content language.
 
-theme = "hugo-coder-portfolio"
+paginate = 20 # Default number of pages per page in pagination.
 
-DefaultContentLanguage = "en"
+pygmentsstyle = "b2" # Color-theme or style for syntax highlighting.
+pygmentscodefences = true # Enable code fence background highlighting.
+pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
+pygmentsUseClasses = true # new add
 
-paginate = 20
+disqusShortname = "yourdiscussshortname" # Enable or disable Disqus.
 
-pygmentsstyle = "b2"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
-pygmentsUseClasses = true
+[params] # theme parameters
+    author = "Yusuke Ishimi" # Author's name.
+    info = "WEB AND APPS ENGINEER" # Author's job title or info.
+    description = "Yusuke Ishimi's personal website" # Site description.
+    keywords = "blog,developer,personal" # Site keywords.
+    avatarurl = "images/avatar.jpg" # Contain the path of the optionnal avatar in the static folder.
 
-disqusShortname = "yourdiscussshortname"
+    footercontent = "Enter a text here." # Add footer content
+    fixedbarContent = "Do you want to know me more private?→" # Add fixedbar content
+    fixedbarContentAfter = "Thank You! Please share it if you like it→" # Add fixedbar content after click
 
-[params]
-    author = "Elias Forsblom"
-    description = "Elias FOrsblom's acedemic blog"
-    keywords = "blog,developer,personal"
-    info = "Statistics and data analysis student"
-    avatarurl = "images/elias.jpg"
-    footercontent = "Enter a text here."
-    fixedbarContent = "Do you want to know me more private?→"
-    fixedbarContentAfter = "Thank You! Please share it if you like it→"
-
+    # Whether you want to hide copyright and credits in the footer.
     hideCredits = false
     hideCopyright = false
-
-    # Bottom sns share
-    snsShare = true
-    # Popular sns share
-    # if you want add sns. please message!
-    enableTwitterShare = true
-    enableFacebookShare = true
-    enableHatenaShare = true
-    enableLineShare = true
-    enableLinkedInShare = true
-
-    thumbnail = "images/tn.png"
 
     # Custom CSS
     custom_css = []
@@ -48,8 +37,22 @@ disqusShortname = "yourdiscussshortname"
     # RTL support
     rtl = false
 
-    langseparator = "|"
+    # Bottom sns share
+    snsShare = true # new add
+    # Popular sns share
+    # if you want add sns. please message!
+    enableTwitterShare = true  # new add
+    enableFacebookShare = true # new add
+    enableHatenaShare = true   # new add
+    enableLineShare = true     # new add
+    enableLinkedInShare = true # new add
 
+    thumbnail = "images/tn.png" # default sns thumbnail
+
+    # Multilanguage mode
+    langseparator = "|" # Separates menus from language selectors when site is multilingual.
+
+# Social links
 [[params.social]]
     name = "Github"
     icon = "fab fa-github"
@@ -66,70 +69,17 @@ disqusShortname = "yourdiscussshortname"
     weight = 3
     url = "https://www.linkedin.com/in/naro143/"
 [[params.social]]
+    # If icon is not set, Text is displayed.
     name = "LinkedIn"
     weight = 4
     url = "https://www.linkedin.com/in/naro143/"
 
-[languages]
-    [languages.en]
-        languagecode = "en"
-        languagename = "English" # The language name to be displayed in the selector.
-        title = "Yusuke Ishimi"
-
-        # You can configure the theme parameter for each language.
-        [languages.en.params]
-            author = "Yusuke Ishimi"
-            info = "WEB AND APPS ENGINEER"
-            description = "Yusuke Ishimi's personal website"
-            keywords = "blog,developer,personal"
-
-        [languages.en.menu] # It is possible to change the menu too.
-
-            [[languages.en.menu.main]]
-                name = "About"
-                weight = 1.0
-                url = "about"
-
-            [[languages.en.menu.main]]
-                name = "Blog"
-                weight = 2.0
-                url = "posts"
-
-            [[languages.en.menu.main]]
-                name = "Projects"
-                weight = 3
-                url = "projects"
-            [[languages.en.menu.main]]
-                name = "Contact me"
-                weight = 5
-                url = "contact"
-
-
-    [languages.ja]
-        languagecode = "ja"
-        languagename = "Japanese"
-        title = "石見 優丞"
-
-        [languages.ja.params]
-            author = "石見 優丞"
-            description = "石見のサイト"
-            keywords = "blog,developer,strona domowa"
-            info = "WEBとアプリのエンジニア"
-
-        [languages.ja.menu]
-            [[languages.ja.menu.main]]
-                name = "テーマについて"
-                weight = 1.0
-                url = "ja/about"
-            [[languages.ja.menu.main]]
-                name = "ブログ"
-                weight = 2.0
-                url = "ja/posts"
-            [[languages.ja.menu.main]]
-                name = "プロジェクト"
-                weight = 3
-                url = "ja/projects"
-            [[languages.ja.menu.main]]
-                name = "お問い合わせ"
-                weight = 5
-                url = "ja/contact"
+# Menu links
+[[menu.main]]
+    name = "Blog"
+    weight = 1
+    url  = "posts"
+[[menu.main]]
+    name = "About"
+    weight = 2
+    url = "about"
