--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseurl = "https://forsblom.netlify.app/"
 title = "Elias Forsblom"
-theme = "coder-portfolio" # Set the theme.
-languagecode = "en" # The site’s language code used to generate RSS.
-defaultcontentlanguage = "en" # The default content language.
+theme = "coder-portfolio"
+languagecode = "en"
+defaultcontentlanguage = "en"
 
 paginate = 20 # Default number of pages per page in pagination.
 
@@ -11,22 +11,22 @@ pygmentscodefences = true # Enable code fence background highlighting.
 pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences without specified language.
 pygmentsUseClasses = true # new add
 
-disqusShortname = "yourdiscussshortname" # Enable or disable Disqus.
+disqusShortname = "eliasforsblom" # Enable or disable Disqus.
 
 [params] # theme parameters
-    author = "Yusuke Ishimi" # Author's name.
-    info = "WEB AND APPS ENGINEER" # Author's job title or info.
-    description = "Yusuke Ishimi's personal website" # Site description.
-    keywords = "blog,developer,personal" # Site keywords.
-    avatarurl = "images/avatar.jpg" # Contain the path of the optionnal avatar in the static folder.
+    author = "Elias Forsblom" # Author's name.
+    info = "Statistics and data analysis student" # Author's job title or info.
+    description = "Elias Forsblom's academic blog" # Site description.
+    keywords = "blog,developer,personal, data analysis, statistics, data, analysis" # Site keywords.
+    avatarurl = "/images/elias.jpg" 
 
-    footercontent = "Enter a text here." # Add footer content
-    fixedbarContent = "Do you want to know me more private?→" # Add fixedbar content
-    fixedbarContentAfter = "Thank You! Please share it if you like it→" # Add fixedbar content after click
+    footercontent = "Enter a text here."
+    fixedbarContent = "Do you want to know me more private?→" 
+    fixedbarContentAfter = "Thank You! Please share it if you like it→" 
 
     # Whether you want to hide copyright and credits in the footer.
-    hideCredits = false
-    hideCopyright = false
+    hideCredits = true
+    hideCopyright = true
 
     # Custom CSS
     custom_css = []
@@ -43,8 +43,8 @@ disqusShortname = "yourdiscussshortname" # Enable or disable Disqus.
     # if you want add sns. please message!
     enableTwitterShare = true  # new add
     enableFacebookShare = true # new add
-    enableHatenaShare = true   # new add
-    enableLineShare = true     # new add
+    enableHatenaShare = false   # new add
+    enableLineShare = false     # new add
     enableLinkedInShare = true # new add
 
     thumbnail = "images/tn.png" # default sns thumbnail
@@ -57,23 +57,13 @@ disqusShortname = "yourdiscussshortname" # Enable or disable Disqus.
     name = "Github"
     icon = "fab fa-github"
     weight = 1
-    url = "https://github.com/naro143/"
-[[params.social]]
-    name = "Twitter"
-    icon = "fab fa-twitter"
-    weight = 2
-    url = "https://twitter.com/naro143/"
+    url = "https://github.com/eliasforsblom"
 [[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin"
     weight = 3
-    url = "https://www.linkedin.com/in/naro143/"
-[[params.social]]
-    # If icon is not set, Text is displayed.
-    name = "LinkedIn"
-    weight = 4
-    url = "https://www.linkedin.com/in/naro143/"
-
+    url = "https://www.linkedin.com/in/elias-forsblom-425278191/"
+    
 # Menu links
 [[menu.main]]
     name = "Blog"
